<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.oracle.database.jdbc</groupId>
    <artifactId>rsi-example</artifactId>
    <version>0.1.0</version>
    <packaging>jar</packaging>

    <name>RSI Example</name>
    <description>Design High-Speed Data Ingestion Services Using MQTT, AMQP, and STOMP</description>

    <properties>
        <maven.compiler.target>19</maven.compiler.target>
        <maven.compiler.source>19</maven.compiler.source>
    </properties>

    <dependencies>
        <!-- RSI -->
        <dependency>
            <groupId>com.oracle.database.jdbc</groupId>
            <artifactId>rsi</artifactId>
            <version>21.7.0.0</version>
        </dependency>
        <dependency>
            <groupId>com.oracle.database.jdbc</groupId>
            <artifactId>ojdbc11</artifactId>
            <version>21.7.0.0</version>
        </dependency>
        <dependency>
            <groupId>com.oracle.database.jdbc</groupId>
            <artifactId>ucp11</artifactId>
            <version>21.7.0.0</version>
        </dependency>

        <!-- AMQP, MQTT, STOMP -->
        <dependency>
            <groupId>org.apache.geronimo.specs</groupId>
            <artifactId>geronimo-jms_1.1_spec</artifactId>
            <version>1.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.qpid</groupId>
            <artifactId>qpid-jms-client</artifactId>
            <version>1.6.0</version>
        </dependency>
        <dependency>
            <groupId>org.fusesource.mqtt-client</groupId>
            <artifactId>mqtt-client</artifactId>
            <version>1.16</version>
        </dependency>
        <dependency>
            <groupId>org.fusesource.stompjms</groupId>
            <artifactId>stompjms-client</artifactId>
            <version>1.19</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>

            <!-- include all the dependencies into the jar so it's easier to execute the example -->
            <plugin>
                <groupId>org.fusesource.mvnplugins</groupId>
                <artifactId>maven-uberize-plugin</artifactId>
                <version>1.14</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>uberize</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

</project>
